Adjust image size and update music control button
Updated the slideshow image size and modified music control button.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 
+<div id="overlay"></div>
+
 <audio id="bgMusic" loop>
     <source src="music.mp3" type="audio/mp3">
 </audio>
 
-<div class="music-control">
-    <button onclick="toggleMusic()">🎵 Play / Pause</button>
-</div>
+<button class="music-btn" onclick="toggleMusic()">🎵 Music</button>
 
 <div class="hearts"></div>
 
@@ -33,7 +33,7 @@
     <a href="love.html" class="btn">💌 Read My Love Letter</a>
 
     <div class="slideshow">
-        <img id="slide" src="https://picsum.photos/400/300?1">
+        <img id="slide" src="https://picsum.photos/500/350?1">
     </div>
 </div>
 
