Revise love message for birthday celebration
Updated birthday message to express deeper love and commitment.

--- a/love.html
+++ b/love.html
@@ -7,20 +7,18 @@
 </head>
 <body>
 
+<div class="hearts"></div>
+
 <div class="container">
     <h1>💌 My Dearest Love</h1>
 
     <p style="width:60%; margin:auto; font-size:20px; line-height:1.8;">
-        From the moment you came into my life, everything changed.
-        Your smile brightens my darkest days,
-        your laughter is my favorite sound,
-        and your love is my greatest treasure.
+        You are my sunshine, my happiness, my everything.
+        Every moment with you feels magical.
+        On your birthday, I promise to love you endlessly,
+        support your dreams, and stay beside you forever.
         <br><br>
-        On your special day, I promise to love you more each day,
-        to support you in every dream,
-        and to stand beside you forever.
-        <br><br>
-        ❤️ Happy Birthday My Forever Love ❤️
+        ❤️ Forever Yours ❤️
     </p>
 
     <br>
