--- a/love.html
+++ b/love.html
@@ -1,29 +1,31 @@
+```html
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Love Letter ❤️</title>
+
 <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-<div class="hearts"></div>
+<body class="love-page">
 
-<div class="container">
-    <h1>💌 My Dearest Love</h1>
+<div class="letter-box">
+<h1>❤️ My Love ❤️</h1>
 
-    <p style="width:60%; margin:auto; font-size:20px; line-height:1.8;">
-        You are my sunshine, my happiness, my everything.
-        Every moment with you feels magical.
-        On your birthday, I promise to love you endlessly,
-        support your dreams, and stay beside you forever.
-        <br><br>
-        ❤️ Forever Yours ❤️
-    </p>
+<p>
+You are the most beautiful part of my life.  
+Every moment with you feels magical.  
+Your smile lights up my darkest days.  
+I am so lucky to have you.  
+Happy Birthday my love — today and always. 💖
+</p>
 
-    <br>
-    <a href="index.html" class="btn">Back to Celebration 🎉</a>
+<button onclick="goHome()">⬅ Back</button>
 </div>
 
+<script src="script.js"></script>
 </body>
 </html>
+```
